[package]
name = "rustproject"
version = "0.1.0"
authors = ["Tomas <prologas@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.0"
bson = "0.14.0"
threadpool = "1.8.0"
serde = "1.0.106"
serde_json = "1.0.52"